# snakelib

./: .env  .env.example  .gitignore  CODE_REVIEW.md  PROJECT_OVERVIEW.md  db.sqlite3  docker-compose.yml  dump.sql  manage.py  змеи.txt
api/: serializers.py  urls.py  views.py
backend/: Dockerfile  db.sqlite3  pyproject.toml
backend/api/: admin.py  authentication.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/api/fixtures/: foods.json  images.json  initial_data.json  terrariums.json
backend/api/migrations/: 0001_initial.py  0002_alter_morph_color.py  0003_alter_cartitem.py  0004_promocode.py  0005_terrarium_cartitem_terrarium_terrariumcategory_and_more.py  0006_food_cartitem_food_foodcategory_food_category_and_more.py  0007_order_orderitem.py  0008_order_payment_method.py
backend/snakelab/: settings.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/api/: client.js
frontend/src/components/Catalog/: Catalog.jsx  Catalog.styles.js
frontend/src/components/Consultation/: Consultation.jsx  Consultation.styles.js
frontend/src/components/Features/: Features.jsx  Features.styles.js
frontend/src/components/Footer/: Footer.jsx  Footer.styles.js
frontend/src/components/Header/: Header.jsx  Header.styles.js
frontend/src/components/Hero/: Hero.jsx  Hero.styles.js
frontend/src/components/Reviews/: Reviews.jsx  Reviews.styles.js
frontend/src/styles/: GlobalStyle.js
nginx/: default.conf
snakelab/: asgi.py  settings.py  wsgi.py
(+40 files in other folders)
