[project]
name = "snakelab"
version = "0.1.0"
description = ""
authors = [
    {name = "Nyaha",email = "Nyaha@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "django (>=6.0.4,<7.0.0)",
    "djangorestframework (>=3.17.1,<4.0.0)",
    "django-filter (>=25.2,<26.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "psycopg2-binary (>=2.9,<3.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "google-auth (>=2.53.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
